# rwkv-ncnn

./: .gitignore  CMakeLists.txt  README.md  chat_ncnn.py  convert_model.py  convert_tokenizer.py  get_pnnx.sh  rwkv_ncnn_custom_layer.py  weird_tupleunpack_workaround.py
archive/: rwkv_ncnn_custom_layer.py
include/: rwkv_tokenizer.h  rwkv_v4neo.h
rwkv/: rwkv_v4neo.py  utils.py
src/: chat_ncnn.cpp  rwkv_tokenizer.cpp  rwkv_v4neo.cpp  rwkv_v4neo_channel_mixing.cpp  rwkv_v4neo_time_mixing.cpp
